--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <link href="Untitled drawing.png" rel="icon" />
   </head>
 
   <body>
