--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>TravelBee</title>
-
-    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script src="scripts.js"></script>
-  </body>
+<html>
+    <head>
+        <title>TravelBee: Sustainable Journeys</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="logo.png">
+    </head>
+    <body>
+        <a href="" id="link" class="hiddenlink"><h1><img src="logo.png"> TravelBee</h1></a>
+        <script>document.getElementById("link").setAttribute("href",window.location.href)</script>
+        <h2>A travel solution that helps save the planet</h2>
+        <h3>Features:</h3>
+        <ul>
+            <img src="app.png" id="app" style="height: 150pt;">
+            <li>A simplistic, colourful UI</li>
+            <li>Points earned based on how eco-friendly your journey is</li>
+            <li>A leaderboard system, showing your points compared to your friends'</li>
+            <li>A global leaderboard showing all users' points</li>
+            <li>Plan a journey, with suggestions on how to make it more eco-friendly</li>
+            <li>See your car's carbon emissions</li>
+        </ul>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+    </body>
 </html>
