Trying cool stuff

--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head>  
+        <!-- HTML Meta Tags -->
+        <meta name="description" content="A travel solution that helps save the planet">
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://travel-bee.github.io/">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="TravelBee: Sustainable Journeys">
+        <meta property="og:description" content="A travel solution that helps save the planet">
+        <meta property="og:image" content="https://travel-bee.github.io/preview.png">
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="travel-bee.github.io">
+        <meta property="twitter:url" content="https://travel-bee.github.io/">
+        <meta name="twitter:title" content="TravelBee: Sustainable Journeys">
+        <meta name="twitter:description" content="A travel solution that helps save the planet">
+        <meta name="twitter:image" content="https://travel-bee.github.io/preview.png">
+
+        <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
         <title>TravelBee: Sustainable Journeys</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="logo.png">
