Never gonna give you up

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li>Plan a journey, with suggestions on how to make it more eco-friendly</li>
             <li>See your car's carbon emissions</li>
         </ul>
+        <p>Try the app <a href="https://shadowcube264.github.io">here</a></p>
         <p> </p>
         <p> </p>
         <p> </p>
