--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
         <p> </p>
         <p> </p>
-        <p>Try the app <a href="https://shadowcube264.github.io">here</a></p>
+        <h4>Try the app <a href="https://shadowcube264.github.io">here</a></h4>
         <p> </p>
         <p> </p>
         <p> </p>
