--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
         <link rel="icon" href="logo.png">
     </head>
     <body>
-        <a href="" id="link" class="hiddenlink"><h1><img src="logo.png"> TravelBee</h1></a>
+        <a href="" id="link" class="hiddenlink"><h1><img src="logo.png" style="width:350pt"></h1></a>
         <script>document.getElementById("link").setAttribute("href",window.location.href)</script>
         <h2>A travel solution that helps save the planet</h2>
         <h3>Features:</h3>
+        <img src="app.png" id="app">
         <ul>
-            <img src="app.png" id="app" style="height: 150pt;">
             <li>A simplistic, colourful UI</li>
             <li>Points earned based on how eco-friendly your journey is</li>
+            <h3>Planned features:</h3>
             <li>A leaderboard system, showing your points compared to your friends'</li>
             <li>A global leaderboard showing all users' points</li>
             <li>Plan a journey, with suggestions on how to make it more eco-friendly</li>
@@ -41,7 +42,8 @@
         </ul>
         <p> </p>
         <p> </p>
-        <h4>Try the app <a href="https://shadowcube264.github.io">here</a></h4>
+        <p> </p>
+        <h3>Try the app <a href="https://studio.code.org/projects/applab/FMHoEbnmxp12nchqI6iPRcuHHyas3MpoPZzSunJJa-g">here</a></h3>
         <p> </p>
         <p> </p>
         <p> </p>
