--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 
         <title>TravelBee: Sustainable Journeys</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="logo.png">
+        <link rel="icon" href="logo-smol.png">
     </head>
     <body>
         <a href="" id="link" class="hiddenlink"><h1><img src="logo.png" style="width:350pt"></h1></a>
         <script>document.getElementById("link").setAttribute("href",window.location.href)</script>
         <h2>A travel solution that helps save the planet</h2>
-        <h3>Features:</h3>
         <img src="app.png" id="app">
         <ul>
+            <h3 style="left:-20pt">Features:</h3>
             <li>A simplistic, colourful UI</li>
             <li>Points earned based on how eco-friendly your journey is</li>
-            <h3>Planned features:</h3>
+            <h3 style="left:-20pt">Planned features:</h3>
             <li>A leaderboard system, showing your points compared to your friends'</li>
             <li>A global leaderboard showing all users' points</li>
             <li>Plan a journey, with suggestions on how to make it more eco-friendly</li>
             <li>See your car's carbon emissions</li>
         </ul>
-        <p> </p>
-        <p> </p>
         <p> </p>
         <h3>Try the app <a href="https://studio.code.org/projects/applab/FMHoEbnmxp12nchqI6iPRcuHHyas3MpoPZzSunJJa-g">here</a></h3>
         <p> </p>
